fix: Fixed CardAdd placeholder not fully visible for EN

--- a/client/src/components/List/CardAdd.module.scss
+++ b/client/src/components/List/CardAdd.module.scss
@@ -1,10 +1,4 @@
 :global(#app) {
-  .field {
-    &::placeholder {
-      font-size: 13px;
-    }
-  }
-
   .wrapper {
     padding-bottom: 6px;
   }
